# Consumer_Producer_Problem

./: CMakeLists.txt  CoEditor.c  CoEditor.h  Dispatcher.c  Dispatcher.h  FreeResource.c  FreeResource.h  Makefile  ProcessConfig.c  ProcessConfig.h  Producer.c  Producer.h  Queue.c  Queue.h  Structs.h  conf.txt  initStructsObjects.c  initStructsObjects.h  initThreads.c  initThreads.h  main.c  manager.c  manager.h
